--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,6 +15,24 @@
             "options": {
                 "cwd": "/usr/bin"
             }
+        },
+        {
+            "label": "builda test",
+            "type": "shell",
+            "command": "/usr/bin/gcc",
+            "args": [
+                "-g",
+                "${fileDirname}/test.c",
+                "-o",
+                "${fileDirname}/out"
+            ],
+            "options": {
+                "cwd": "/usr/bin"
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ],
     "version": "2.0.0"
