modificacoes na automatizacao de testes

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,7 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "gcc build active file",
+            "preLaunchTask": "Make wall",
             "miDebuggerPath": "/usr/bin/gdb"
         }
     ]
