--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    
         {
             "name": "gcc test",
             "type": "cppdbg",
@@ -31,7 +32,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}/programaTrab",
-            "args": [],
+            "args": ["<","7.in"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
